classDiagram
    direction LR

    %% Styling definitions
    classDef enumDef fill:#e1f5fe,stroke:#01579b,stroke-width:2px
    classDef coreEntity fill:#fff9c4,stroke:#fbc02d,stroke-width:2px
    classDef behavior fill:#e8f5e9,stroke:#2e7d32,stroke-width:2px
    classDef util fill:#f3e5f5,stroke:#4a148c,stroke-width:1px

    %% Core Enums
    class Component:::enumDef {
        <<enumeration>>
        Module
        StructuredType
        TypeAlias
        Function
        Field
    }
    class TypeRef:::enumDef {
        <<enumeration>>
        Primitive
        Unresolved
        ResolutionQuery
        Resolved
        External
        Union
        EvaluatedAccess
        Failed
    }

    %% Main Entities
    class Module:::coreEntity {
        +QualifiedName name
        +Module[] sub_modules
        +StructuredType[] structured_types
        +TypeAlias[] type_aliases
        +Function[] free_functions
        +ImplBlock[] impl_blocks
        +Field[] free_variables
    }

    class StructuredType:::coreEntity {
        +QualifiedName name
        +StructuredTypeKind kind
        +Field[] fields
        +Function[] methods
        +StructuredType[] nested_types
        +TypeRef[] super_types
    }

    class ImplBlock:::coreEntity {
        +QualifiedName name
        +TypeRef impl_for
        +Function[] methods
        +StructuredType[] nested_types
    }

    class TypeAlias:::coreEntity {
        +QualifiedName name
        +TypeRef target
    }

    %% Behavior Entities
    class Function:::behavior {
        +bool is_constructor
    }
    class Signature:::behavior {
        +TypeRef return_type
    }
    class Block:::behavior {
        +Field[] declarations
        +Block[] sub_blocks
    }

    %% Utilities
    class Field:::util {
        +Identifier name
        +TypeRef ty
    }
    class Parameter:::util {
        +Identifier name
        +TypeRef ty
    }

    %% Apply Styles (inline using ::: syntax)

    %% Hierarchical / Inheritance
    Component <|-- Module
    Component <|-- StructuredType
    Component <|-- Function
    Component <|-- TypeAlias

    %% Core Aggregations (Kept minimal to avoid long loops)
    Module *-- Module : sub_modules
    Module *-- StructuredType : contains
    Module *-- ImplBlock : contains
    
    StructuredType *-- StructuredType : nested
    StructuredType *-- Function : methods
    ImplBlock *-- Function : methods

    %% Function composition
    Function *-- Signature : signature
    Function *-- Block : body
    Signature *-- Parameter : params
    Block *-- Block : nested
    Block *-- Field : vars
    StructuredType *-- Field : fields

    %% Dependency Links (Dotted to differentiate from composition)
    Field ..> TypeRef : types
    Parameter ..> TypeRef : types
    Signature ..> TypeRef : return
    TypeAlias ..> TypeRef : aliases
    ImplBlock ..> TypeRef : impl_for
